--- a/Study/Study.csproj
+++ b/Study/Study.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -65,7 +66,9 @@
     <Compile Include="ExtensionMethod.cs" />
     <Compile Include="IParameters.cs" />
     <Compile Include="IUserActions.cs" />
+    <Compile Include="Lambda.cs" />
     <Compile Include="LineObject.cs" />
+    <Compile Include="LInQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhiteStraightLine.cs" />
   </ItemGroup>
