--- a/RevitPlugin/RevitPlugin.csproj
+++ b/RevitPlugin/RevitPlugin.csproj
@@ -131,6 +131,7 @@
     <Content Include="PackageContents.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="RevitPlugin.addin" />
   </ItemGroup>
