--- a/UIBuilder/UIBuilder.csproj
+++ b/UIBuilder/UIBuilder.csproj
@@ -110,5 +110,8 @@
       <Name>Study</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
