--- a/BergmannStudy/BergmannStudy.csproj
+++ b/BergmannStudy/BergmannStudy.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3637F7D-9215-40F7-943D-D9460112E628}</ProjectGuid>
+    <ProjectGuid>{ACC16126-C329-46DA-BC32-D3F02B4BD9BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UIBuilder</RootNamespace>
-    <AssemblyName>UIBuilder</AssemblyName>
+    <RootNamespace>BergmannStudy</RootNamespace>
+    <AssemblyName>BergmannStudy</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -30,46 +30,39 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ASCADLinkMgd">
+      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASCADLinkMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="ASGeometryMgd">
+      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASGeometryMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="ASObjectsMgd">
+      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASObjectsMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="ASProfilesMgd">
+      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASProfilesMgd.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="RevitAPI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPISteel">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPISteel.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPISteel.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
@@ -80,23 +73,17 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UIFramework">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\UIFramework.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2021\UIFramework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserInterface.cs" />
+    <Compile Include="CubeFamilyCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ribbon\MyCube.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArCmd\ArCm.csproj">
-      <Project>{0f07a0b3-b1d1-4f55-b318-ee923a94fd1c}</Project>
-      <Name>ArCm</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BergmannStudy\BergmannStudy.csproj">
-      <Project>{acc16126-c329-46da-bc32-d3f02b4bd9ba}</Project>
-      <Name>BergmannStudy</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Functions\Functions.csproj">
       <Project>{af5a7a5c-087f-4c13-92b3-10ffb4c8533f}</Project>
       <Name>Functions</Name>
@@ -109,13 +96,6 @@
       <Project>{9ffbe8dd-85ee-4a09-a6c8-b34d5bdad4dd}</Project>
       <Name>PluginUtil</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Study\Study.csproj">
-      <Project>{a969dd13-9768-4806-acb4-b02691d62e56}</Project>
-      <Name>Study</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
