--- a/BergmannStudy/BergmannStudy.csproj
+++ b/BergmannStudy/BergmannStudy.csproj
@@ -31,31 +31,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ASCADLinkMgd">
-      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASCADLinkMgd.dll</HintPath>
-    </Reference>
-    <Reference Include="ASGeometryMgd">
-      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASGeometryMgd.dll</HintPath>
-    </Reference>
-    <Reference Include="ASObjectsMgd">
-      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASObjectsMgd.dll</HintPath>
-    </Reference>
-    <Reference Include="ASProfilesMgd">
-      <HintPath>E:\x64\RVT\PF64\Autodesk\Root\AddIns\SteelConnections\ASProfilesMgd.dll</HintPath>
+    <Reference Include="AdWindows, Version=3.0.4.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\AdWindows.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="RevitAPI, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPI.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="RevitAPISteel">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPISteel.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="RevitAPIUI, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPIUI.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -72,14 +60,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UIFramework">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2021\UIFramework.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="UIFramework, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\UIFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CubeFamilyCommand.cs" />
+    <Compile Include="ElementCreation\Implementation\ExtrusionCreator.cs" />
+    <Compile Include="ElementCreation\Interfaces\AbstractGenericFormCreator.cs" />
+    <Compile Include="ElementCreation\Interfaces\IGenericFormCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ribbon\MyCube.cs" />
   </ItemGroup>
@@ -96,6 +87,9 @@
       <Project>{9ffbe8dd-85ee-4a09-a6c8-b34d5bdad4dd}</Project>
       <Name>PluginUtil</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
