--- a/Functions/Functions.csproj
+++ b/Functions/Functions.csproj
@@ -49,27 +49,18 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ASCADLinkMgd">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\AddIns\SteelConnections\ASCADLinkMgd.dll</HintPath>
-    </Reference>
-    <Reference Include="ASObjectsMgd">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\AddIns\SteelConnections\ASObjectsMgd.dll</HintPath>
-    </Reference>
-    <Reference Include="ASProfilesMgd">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\AddIns\SteelConnections\ASProfilesMgd.dll</HintPath>
+    <Reference Include="AdWindows, Version=3.0.4.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\AdWindows.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="RevitAPI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
+    <Reference Include="RevitAPI, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="RevitAPISteel">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPISteel.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPIUI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
+    <Reference Include="RevitAPIUI, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -86,8 +77,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UIFramework">
-      <HintPath>C:\Program Files\Autodesk\Revit 2019\UIFramework.dll</HintPath>
+    <Reference Include="UIFramework, Version=21.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2021.1.4\lib\net48\UIFramework.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -98,6 +89,9 @@
     <Compile Include="FamilyOperations.cs" />
     <Compile Include="ParameterOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
