--- a/ArCmd/ArCm.csproj
+++ b/ArCmd/ArCm.csproj
@@ -39,6 +39,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+    <NoWarn>CS0168, CS0169, CS0219, CS0649</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -99,7 +100,6 @@
     <ProjectReference Include="..\Functions\Logics.csproj">
       <Project>{af5a7a5c-087f-4c13-92b3-10ffb4c8533f}</Project>
       <Name>Logics</Name>
-      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\PluginLogic\PluginLogics.csproj">
       <Project>{670d8252-9598-4cca-822e-70afc24281da}</Project>
