--- a/ConsoleStudy/ConsoleStudy.csproj
+++ b/ConsoleStudy/ConsoleStudy.csproj
@@ -13,6 +13,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
+    <NoWarn>1701;1702, CS0168, CS0169, CS0219, CS0649</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
