--- a/BergmannStudy/StudyTask.csproj
+++ b/BergmannStudy/StudyTask.csproj
@@ -74,8 +74,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ribbon\MyRevolve.cs" />
+    <Compile Include="Ribbon\MySweptBlend.cs" />
+    <Compile Include="RevolveFamilyCommand.cs" />
+    <Compile Include="SweptBlendFamilyCommand.cs" />
+    <Compile Include="SweepFamilyCommand.cs" />
+    <Compile Include="BlendFamilyCommand.cs" />
     <Compile Include="CubeFamilyCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ribbon\MySweep.cs" />
+    <Compile Include="Ribbon\MyBlend.cs" />
     <Compile Include="Ribbon\MyCube.cs" />
   </ItemGroup>
   <ItemGroup>
