--- a/BergmannStudy/StudyTask.csproj
+++ b/BergmannStudy/StudyTask.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -74,6 +75,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ribbon\CopyFamily.cs" />
+    <Compile Include="Ribbon\FamilyCopir.cs" />
     <Compile Include="Ribbon\MyRevolve.cs" />
     <Compile Include="Ribbon\MySweptBlend.cs" />
     <Compile Include="RevolveFamilyCommand.cs" />
