--- a/Functions/Logics.csproj
+++ b/Functions/Logics.csproj
@@ -39,7 +39,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <NoWarn>CS0168, CS0169, CS0219, CS0649</NoWarn>
   </PropertyGroup>
@@ -49,7 +49,7 @@
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
@@ -101,6 +101,11 @@
     <Compile Include="Geometry\Implementation\ExtrusionCreator.cs" />
     <Compile Include="Geometry\Interface\AbstractGenericFormCreator.cs" />
     <Compile Include="Geometry\Interface\IGenericFormCreator.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="RevitDocument\FamilyCopier.cs" />
     <Compile Include="RevitDocument\FamilyCreator.cs" />
     <Compile Include="Parameters\ParameterOperations.cs" />
@@ -108,6 +113,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
