--- a/BergmannStudy/packages.config
+++ b/BergmannStudy/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Revit_All_Main_Versions_API_x64" version="2022.1.0" targetFramework="net48" />
+  <package id="Serilog" version="2.10.0" targetFramework="net48" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net48" />
 </packages>
