--- a/Functions/Logics.csproj
+++ b/Functions/Logics.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>Logics</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
+<LangVersion>preview</LangVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -52,11 +53,21 @@
     <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DEV|x64' ">
+    <OutputPath>bin\x64\DEV\</OutputPath>
+    <PlatformTarget>x64</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows, Version=3.1.7.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Revit_All_Main_Versions_API_x64.2022.1.0\lib\net48\AdWindows.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="CSharpFunctionalExtensions, Version=2.27.1.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\CSharpFunctionalExtensions.2.27.1\lib\net472\CSharpFunctionalExtensions.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -92,6 +103,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FamilyExport\FamilyDocumentWrap.cs" />
+    <Compile Include="FamilyExport\ModelExport\Extractors\IExtractor.cs" />
+    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\ExtrusionExtracter.cs" />
+    <Compile Include="FamilyExport\ModelExport\FamilyExporter.cs" />
+    <Compile Include="FamilyExport\Wraps\Implementations\ExtrusionWrap.cs" />
+    <Compile Include="FamilyExport\Wraps\Implementations\RevolutionWrap.cs" />
+    <Compile Include="FamilyExport\Wraps\Interfaces\AbstractElementData.cs" />
+    <Compile Include="FamilyExport\Wraps\Interfaces\AbstractGenericForm.cs" />
+    <Compile Include="FamilyExport\Wraps\Interfaces\IElement.cs" />
     <Compile Include="Geometry\GeometryOperations.cs" />
     <Compile Include="Geometry\Implementation\RevolutionCreator.cs" />
     <Compile Include="Geometry\Implementation\SweptBlendCreator.cs" />
@@ -118,6 +138,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\PluginUtils\PluginUtil.csproj">
+      <Project>{9ffbe8dd-85ee-4a09-a6c8-b34d5bdad4dd}</Project>
+      <Name>PluginUtil</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
