--- a/RevitPlugin/packages.config
+++ b/RevitPlugin/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSharpFunctionalExtensions" version="2.27.1" targetFramework="net48" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.7" targetFramework="net48" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net48" />
