--- a/ConsoleStudy/ConsoleStudy.csproj
+++ b/ConsoleStudy/ConsoleStudy.csproj
@@ -19,12 +19,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.42" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
+    <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="2022.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Logics\Logics.csproj" />
+    <ProjectReference Include="..\PluginLogics\PluginLogics.csproj" />
     <ProjectReference Include="..\StudyHome\StudyHome.csproj" />
   </ItemGroup>
 
