--- a/Logics/packages.config
+++ b/Logics/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSharpFunctionalExtensions" version="2.27.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Revit_All_Main_Versions_API_x64" version="2022.1.0" targetFramework="net48" />
 </packages>
