--- a/StudyTask/StudyTask.csproj
+++ b/StudyTask/StudyTask.csproj
@@ -70,6 +70,9 @@
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="RevitAPI, Version=22.0.0.0, Culture=neutral, processorArchitecture=AMD64">
@@ -115,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Configure.cs" />
     <Compile Include="CopyFamilyCommand.cs" />
+    <Compile Include="DocImport.cs" />
     <Compile Include="DocExport.cs" />
     <Compile Include="Ribbon\MyCubes.cs" />
     <Compile Include="Ribbon\MyRevolution.cs" />
@@ -130,6 +134,7 @@
     <Compile Include="Ribbon\MyCube.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Files\FamilyData.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
